Réglage de la physique / Suppression du problème de gravité / Réglage du pawn / Ajout de la trigger box pour la porte et codage du blue print

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Map/Devoir_Lampes.Devoir_Lampes
 GameDefaultMap=/Game/Map/Devoir_Lampes.Devoir_Lampes
-GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
